--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -33,8 +33,10 @@ python-dateutil~=2.8.1
 Pillow~=8.1.0
 cachetools~=4.2.0
 oauthlib~=3.1.0
-chardet~=4.0.0
 decorator~=5.0.7
 redis~=3.5.3
 pydantic~=1.8.1
-python-jose
+google~=3.0.0
+app~=0.0.1
+celery~=5.0.5
+loguru~=0.5.3
