--- a/Backend/package.json
+++ b/Backend/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "dotenv": "^9.0.0",
     "express-session": "^1.17.1",
+    "passport-reddit": "^0.2.4",
     "request": "^2.88.2"
   }
 }
