--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
     "express": "~4.16.1",
     "grant": "^5.4.13",
     "http-errors": "~1.6.3",
+    "mongoose": "^5.12.12",
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
     "passport-discord": "^0.1.4",
@@ -23,6 +24,7 @@
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^9.0.0",
     "express-session": "^1.17.1",
     "passport-reddit": "^0.2.4",
