--- a/Backend/package.json
+++ b/Backend/package.json
@@ -20,6 +20,7 @@
     "passport-google-oauth": "^2.0.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-oauth": "^1.0.0",
+    "passport-twitch": "^1.0.3",
     "passport-twitter": "^1.0.4",
     "pug": "2.0.0-beta11"
   },
@@ -28,6 +29,7 @@
     "dotenv": "^9.0.0",
     "express-session": "^1.17.1",
     "passport-reddit": "^0.2.4",
+    "passport-twitch-new": "^0.0.2",
     "request": "^2.88.2"
   }
 }
