--- a/Backend/package.json
+++ b/Backend/package.json
@@ -22,7 +22,9 @@
     "passport-oauth": "^1.0.0",
     "passport-twitch": "^1.0.3",
     "passport-twitter": "^1.0.4",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "twitch": "^4.5.5",
+    "twitter": "^1.7.1"
   },
   "devDependencies": {
     "axios": "^0.21.1",
@@ -31,6 +33,7 @@
     "express-session": "^1.17.1",
     "passport-reddit": "^0.2.4",
     "passport-twitch-new": "^0.0.2",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "snoowrap": "^1.23.0"
   }
 }
