--- a/Backend/package.json
+++ b/Backend/package.json
@@ -34,6 +34,7 @@
     "cors": "^2.8.5",
     "dotenv": "^9.0.0",
     "express-session": "^1.17.1",
+    "luxon": "^1.27.0",
     "passport-reddit": "^0.2.4",
     "passport-twitch-new": "^0.0.2",
     "prettier": "2.3.0",
