--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,11 +6,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "body-parser": "^1.18.3",
     "connect-ensure-login": "^0.1.1",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^9.0.0",
     "express": "~4.16.1",
+    "express-session": "^1.17.2",
     "googleapis": "^75.0.0",
     "grant": "^5.4.13",
     "http-errors": "~1.6.3",
@@ -26,21 +30,8 @@
     "passport-twitter": "^1.0.4",
     "pug": "2.0.0-beta11",
     "rascal": "^13.0.2",
+    "snoowrap": "^1.23.0",
     "twitch": "^4.5.5",
     "twitter": "^1.7.1"
-  },
-  "devDependencies": {
-    "@google-cloud/local-auth": "^1.0.1",
-    "axios": "^0.21.1",
-    "cors": "^2.8.5",
-    "dotenv": "^9.0.0",
-    "express-session": "^1.17.1",
-    "ioredis": "^4.27.4",
-    "luxon": "^1.27.0",
-    "passport-reddit": "^0.2.4",
-    "passport-twitch-new": "^0.0.2",
-    "prettier": "2.3.0",
-    "request": "^2.88.2",
-    "snoowrap": "^1.23.0"
   }
 }
