--- a/Backend/package.json
+++ b/Backend/package.json
@@ -35,5 +35,8 @@
     "snoowrap": "^1.23.0",
     "twitch": "^4.5.5",
     "twitter": "^1.7.1"
+  },
+  "devDependencies": {
+    "ioredis": "^4.27.6"
   }
 }
