--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,33 +6,27 @@ services:
     image: redis:6.2-alpine
     restart: unless-stopped
     environment:
-      # ALLOW_EMPTY_PASSWORD is recommended only for development.
-      - ALLOW_EMPTY_PASSWORD=yes
       - REDIS_DISABLE_COMMANDS=FLUSHDB,FLUSHALL
-    ports:
-      - 6379:6379
     volumes:
       - 'redis_data:/bitnami/redis/data'
-    
-  mongo:
-    container_name: "MongoDB"
-    image: mongo:4.4.5-bionic
-    restart: unless-stopped
-    ports:
-      - 27017:27017
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
-
-  rabbitmq:
-    image: rabbitmq:3.8-rc-alpine
-    container_name: 'RabbitMQ'
-    restart: unless-stopped
-    ports:
-      - 5672:5672
-      - 15672:15672
+    networks: 
+      - services
+  backend:
+    container_name: "BackendAPI"
+    ports: 
+      - "8080:8080"
+    build: ./Backend
+    networks: 
+      - services
+  bot:
+    container_name: "DiscordBot"
+    build: ./Bot
+    networks: 
+      - services
 
 volumes:
   redis_data:
     driver: local
 
+networks: 
+  services: 
