--- a/Backend/package.json
+++ b/Backend/package.json
@@ -37,9 +37,13 @@
     "redis": "^3.1.2",
     "snoowrap": "^1.23.0",
     "twitch": "^4.5.5",
+    "twitch-auth": "^4.6.0",
     "twitter": "^1.7.1"
   },
   "devDependencies": {
+    "eslint": "^7.29.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.4",
     "winston": "^3.3.3"
   }
 }
