fix: packages and general fixes

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -30,9 +30,9 @@
     "passport-google-oauth2": "^0.2.0",
     "passport-oauth": "^1.0.0",
     "passport-twitch": "^1.0.3",
-    "passport-twitter": "^1.0.4",
+    "passport-twitter": "^0.1.5",
     "prom-client": "^13.1.0",
-    "pug": "2.0.0-beta11",
+    "pug": "^3.0.2",
     "rascal": "^13.0.2",
     "redis": "^3.1.2",
     "snoowrap": "^1.23.0",
