foreach isnt a function, works again!

--- a/.gitignore
+++ b/.gitignore
@@ -329,3 +329,4 @@ yarn-error.log
 # End of https://www.toptal.com/developers/gitignore/api/python,vue,vuejs,pycharm+all,webstorm+all,venv
 
 .env
+docker-compose.yml
