--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     container_name: "BackendAPI"
     ports:
       - "8080:8080"
-    image: omneex/api-openaltid
+    build: ./Backend
     env_file:
       - ./Backend/.env
     networks:
