--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,13 +7,13 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "body-parser": "^1.19.0",
     "connect-redis": "^6.0.0",
     "cors": "^2.8.5",
     "debug": "^4.3.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "gaxios": "^4.3.0",
     "googleapis": "^80.0.0",
     "helmet": "^4.6.0",
     "ioredis": "^4.27.6",
@@ -31,8 +31,22 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "eslint": "^7.29.0",
+    "@tsconfig/node14": "^1.0.1",
+    "@types/connect-redis": "^0.0.17",
+    "@types/cors": "^2.8.11",
+    "@types/express-session": "^1.17.3",
+    "@types/ioredis": "^4.26.4",
+    "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.3",
+    "@types/passport": "^1.0.6",
+    "@types/passport-discord": "^0.1.3",
+    "@types/redis": "^2.8.30",
+    "@types/twitter": "^1.7.1",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
+    "eslint": "^7.30.0",
+    "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.4",
-    "ts-migrate": "^0.1.19"
+    "typescript": "^4.2.4"
   }
 }
