--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,7 +3,9 @@
   "version": "1.1.0",
   "private": true,
   "scripts": {
-    "start": "node bin/www"
+    "start": "node dist/App.js",
+    "dev": "ts-node App.ts",
+    "compile": "tsc"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -47,6 +49,7 @@
     "eslint": "^7.30.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.4",
+    "ts-node": "^10.0.0",
     "typescript": "^4.2.4"
   }
 }
