--- a/Backend/package.json
+++ b/Backend/package.json
@@ -27,6 +27,7 @@
     "twitch": "^4.6.0",
     "twitch-auth": "^4.6.0",
     "twitter": "^1.7.1",
+    "express-prom-bundle": "^6.3.6",
     "winston": "^3.3.3"
   },
   "devDependencies": {
